force-app/main/default/objects/Damage_Payment_Reduction__c/Damage_Payment_Reduction__c.object-meta.xml
<CustomObject>
    <label>Damage Payment / Reduction</label>
    <nameField>
        <displayFormat>DPR-{0000}</displayFormat>
        <label>Damage Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Damage Payment / Reduction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>