force-app/main/default/objects/Damage_Payment_Reduction__c/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <label>Damage</label>
    <referenceTo>litify_pm__Damage__c</referenceTo>
    <relationshipLabel>Damages Payment / Reductions</relationshipLabel>
    <relationshipName>Damages_Payment_Reductions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>