force-app/main/default/objects/Damage_Payment_Reduction__c/fields/Damage_Type__c.field-meta.xml
<CustomField>
    <fullName>Damage_Type__c</fullName>
    <label>Damage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>