force-app/main/default/objects/Damage_Payment_Reduction__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Damages Payment / Reductions</relationshipLabel>
    <relationshipName>Damages_Payment_Reductions</relationshipName>
    <type>Lookup</type>
</CustomField>